# ChangeLog for media-gfx/actdiag
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Apr 2012; James Rowe <jnrowe@gmail.com> actdiag-0.3.2.ebuild:
  Keyworded amd64.

  09 Apr 2012; James Rowe <jnrowe@gmail.com> actdiag-0.3.1.ebuild,
  actdiag-0.3.2.ebuild:
  src_install default hack now in jnrowe-pypi eclass.

  09 Apr 2012; James Rowe <jnrowe@gmail.com> actdiag-0.3.1.ebuild,
  actdiag-0.3.2.ebuild:
  Switched to python-distutils-ng eclass.

  28 Mar 2012; James Rowe <jnrowe@gmail.com> -actdiag-0.3.0.ebuild,
  actdiag-0.3.1.ebuild:
  Keyworded x86.

  28 Mar 2012; James Rowe <jnrowe@gmail.com> actdiag-0.3.1.ebuild:
  Keyworded amd64.

*actdiag-0.3.2 (19 Mar 2012)

  19 Mar 2012; James Rowe <jnrowe@gmail.com> +actdiag-0.3.2.ebuild:
  Version bump [569].

  18 Mar 2012; James Rowe <jnrowe@gmail.com> actdiag-0.3.0.ebuild,
  actdiag-0.3.1.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> actdiag-0.3.0.ebuild,
  actdiag-0.3.1.ebuild:
  Removed Python 2.4 support.

*actdiag-0.3.1 (27 Feb 2012)

  27 Feb 2012; James Rowe <jnrowe@gmail.com> +actdiag-0.3.1.ebuild:
  Version bump [552].

  20 Jan 2012; James Rowe <jnrowe@gmail.com> -actdiag-0.2.0.ebuild,
  actdiag-0.3.0.ebuild:
  Keyworded x86.

  20 Jan 2012; James Rowe <jnrowe@gmail.com> actdiag-0.3.0.ebuild:
  Keyworded amd64.

*actdiag-0.3.0 (21 Dec 2011)

  21 Dec 2011; James Rowe <jnrowe@gmail.com> +actdiag-0.3.0.ebuild:
  Version bump [494].

  21 Nov 2011; James Rowe <jnrowe@gmail.com> -actdiag-0.1.8.ebuild,
  actdiag-0.2.0.ebuild:
  Keyworded x86.

  21 Nov 2011; James Rowe <jnrowe@gmail.com> actdiag-0.2.0.ebuild:
  Keyworded amd64.

  18 Nov 2011; James Rowe <jnrowe@gmail.com> -actdiag-0.1.7.ebuild,
  actdiag-0.1.8.ebuild:
  Keyworded x86.

  18 Nov 2011; James Rowe <jnrowe@gmail.com> actdiag-0.1.8.ebuild:
  Keyworded amd64.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*actdiag-0.2.0 (22 Oct 2011)
