@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST actdiag-0.3.1.tar.gz 19817 RMD160 2e8afc7ca83ff434f2d95d86721c36a38f56a3a1 SHA1 9094ceacf866e417b25772ae49e308a5f9ed287c SHA256 01d170434efd0dc613f461b59dbefa0c5938eb18b12a738570976d06ff533f06
 DIST actdiag-0.3.2.tar.gz 19858 RMD160 2e8366083c7cc98d33fccd1c10d9016be02348c3 SHA1 e2a80651077716ae4a03a212f5e10099110fe5d4 SHA256 728de3cfdd5a693c883425b65ffba275ebf659c294bd4caef2c116b595f9f2eb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk9y8xUACgkQzJrj3cAXR0lF7ACfbl+8AeCms9jR02BYb+mSn7bs
-JikAnRvJe9C6x23f0WGuURP2UQYC1KXc
-=nAOK
+iEYEAREKAAYFAk+OqGoACgkQzJrj3cAXR0kc/gCdHnjtuaJQYVpYKKiPqA1Hgh+S
+NssAniOgGcmwEqNkTEM9gkjW+03W5DR5
+=2LeE
 -----END PGP SIGNATURE-----
