@@ -14,7 +14,7 @@ DESCRIPTION="Generate activity-diagram image file from spec-text file"
 
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="minimal"
 
 DEPEND="dev-python/setuptools"
