@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install postinst prepare pretend test unpack
-DEPEND=dev-python/setuptools python_targets_python2_7? ( dev-lang/python:2.7 )
-DESCRIPTION=Generate activity-diagram image file from spec-text file
-EAPI=4
-HOMEPAGE=http://pypi.python.org/pypi/actdiag/
-IUSE=minimal python_targets_python2_7
-KEYWORDS=amd64 x86
-LICENSE=Apache-2.0
-RDEPEND=>=media-gfx/blockdiag-1.1.2 !minimal? ( dev-python/sphinx ) python_targets_python2_7? ( dev-lang/python:2.7 )
-REQUIRED_USE=|| ( python_targets_python2_7 )
-SLOT=0
-SRC_URI=mirror://pypi/a/actdiag/actdiag-0.3.1.tar.gz
-_eclasses_=base	5f35078c26d6c60556d5c8a2feb4f84f	eutils	4e234f0a75d16eabe69191b391892d7b	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9c728fa97679b3ca2742cf8ccd260599	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=7b601e2473668de749e8eb9f1ad687d0
