@@ -1,4 +1,3 @@
-REM 2012-04-18 *1 MSG %"Stabilise x86 media-gfx/actdiag-0.3.2%" %a
 REM 2012-04-18 *1 MSG %"Stabilise x86 dev-python/argh-0.15.1%" %a
 REM 2012-04-18 *1 MSG %"Stabilise x86 media-gfx/blockdiag-1.1.4%" %a
 REM 2012-04-18 *1 MSG %"Stabilise x86 dev-python/fancycompleter-0.4%" %a
